k8s/deploy-with-nas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dosgames-web
  namespace: geek-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dosgames-web
      app.kubernetes.io/instance: dosgames-web-0.0.1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dosgames-web
        app.kubernetes.io/instance: dosgames-web-0.0.1
    spec:
      containers:
        - name: dosgames-web
          image: jameszhan/dosgames-web:0.0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /app/static/games/bin
              name: dosgames-pvc-vol
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: dosgames-pvc-vol
          persistentVolumeClaim:
            claimName: dosgames-pvc
