k8s/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dosgames-web
  namespace: geek-apps
  labels:
    app.kubernetes.io/name: dosgames-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dosgames-web
    app.kubernetes.io/instance: dosgames-web-0.0.1
  EOF

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dosgames-web
  namespace: geek-apps
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - games.zizhizhan.com
      secretName: star.zizhizhan.com-tls
  rules:
    - host: games.zizhizhan.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: dosgames-web
                port:
                  number: 80
